_sass/world/2024/modules/_session.scss
.sessionPage {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 45px 0px;
    width: 100%;
    height: 100%;
    flex: 1;

    .sessionContainer {
        position: relative;
        background-color: var(--white);
        width: 85%;
        max-width: 1300px;
        display: flex;
        border-radius: 15px;
        flex-direction: column;

        .breadCrumbsContainer {
            position: absolute;
            left: 0;
            top: 0;
            margin-top: -41px;
            height: 40px;
            display: flex;
            align-items: center;
            justify-content: center;
            gap: 5px;
            color: white;
            font-size: 1.7rem;
            text-wrap: nowrap;
            overflow: scroll;

            p {
                font-weight: 800;
                font-size: 1.7rem;
            }

            @media screen and (max-width: 500px) {
                font-size: 1.4rem;

                p {
                    font-size: 1.4rem;
                }
            }

            @media screen and (max-width: 430px) {
                font-size: 1rem;

                p {
                    font-size: 1rem;
                }
            }
        }

        .topContainer {
            display: flex;
            align-items: flex-start;
            justify-content: center;
            flex-direction: column;
            gap: 15px;
            padding: 25px 75px;
            padding-top: 45px;

            .sessionTitle {
                color: var(--red);
            }

            p {
                line-height: 1.4;
            }

            ul {
                list-style-type: disc;
                padding-left: 20px;
                display: flex;
                flex-direction: column;
                gap: 10px;

                li {
                    line-height: 1.3;
                    font-size: var(--type-medium);
                    font-family: "Roboto", sans-serif;
                    font-style: normal;
                }
            }

            .informationContainer {
                display: flex;
                flex-direction: column;
                z-index: 6;

                .placeHolderContainer {
                    width: 100%;
                    height: 30px;
                }

                .sessionTimeContainer,
                .sessionDateContainer,
                .sessionLocationContainer {
                    display: flex;
                    align-items: center;
                    gap: 10px;

                    p {
                        font-size: var(--type-medium);
                        font-weight: 700;
                        color: var(--purple);
                        letter-spacing: 0.03rem;

                        @media screen and (max-width: 800px) {
                            font-size: var(--type-large);
                        }
                    }

                    svg {
                        width: 55px;
                        height: 55px;
                    }
                }

                .sessionLocationContainer {
                    margin-left: -8px;
                    margin-top: -2px;

                    svg {
                        width: 70px;
                        height: 70px;
                    }

                    p {
                        margin-left: -7px;
                    }
                }
            }

            @media screen and (max-width: 900px) {
                padding-left: 25px;
                padding-right: 25px;
                padding-bottom: 30px;
            }

            @media screen and (max-width: 500px) {
                padding-left: 15px;
                padding-right: 15px;
                padding-bottom: 55px;
            }
        }

        .bottomContainer {
            position: relative;
            display: flex;
            align-items: center;
            flex-direction: column;
            justify-content: flex-end;
            width: 100%;
            padding-top: 190px;
            padding-bottom: 40px;
            border-radius: 0px 0px 10px 10px;
            background-color: var(--blue);
            gap: 15px;
            // height: 500px;
            margin-top: -120px;

            @media screen and (max-width: 1300px) {
                padding-top: 150px;
            }

            @media screen and (max-width: 800px) {
                padding-top: 100px;
                margin-top: -90px;
            }



            &.common-shape--top-white-down-left {
                &:before {
                    top: 0px;
                    z-index: 5;
                }
            }

            .speakerContainer {
                position: relative;
                width: 80%;
                min-height: 300px;
                background-color: var(--white);
                display: flex;
                align-items: center;
                justify-content: center;
                padding: 60px 0;
                border-radius: 10px;
                text-decoration: none;
                transition: all 0.25s ease-in-out;

                @media screen and (max-width: 900px) {
                    padding: 50px 0;
                }


                @media screen and (max-width: 500px) {
                    width: 95%;
                }

                .theLine {
                    z-index: 2;
                    position: absolute;
                    width: 3px;
                    height: 100%;
                    background-color: var(--blue);
                }

                .speakerContent {
                    z-index: 3;
                    width: 85%;
                    border: solid 3px var(--blue);
                    border-left: 0;
                    border-right: 0;
                    background-color: white;
                    height: 100%;
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    padding: 25px 0;
                    transition: padding 0.25s ease-in-out;

                    .left {
                        width: 50%;
                        display: flex;
                        align-content: center;
                        justify-content: center;
                        height: 100%;

                        img {
                            border-radius: 50%;
                            width: 300px;
                            height: 300px;
                            will-change: box-shadow;
                            transition: 0.4s ease;
                            object-fit: cover;
                            object-position: center;

                            // desktop 
                            @media screen and (max-width: 950px) {
                                width: 250px;
                                height: 250px;
                            }

                            &:hover {
                                box-shadow: 0px 0px 30px 10px var(--blue);
                            }
                        }
                    }

                    .rightSession {
                        display: flex;
                        flex-direction: column;
                        gap: 10px;
                        width: 50%;

                        p {
                            color: black;
                            font-size: var(--type-small);
                        }

                        .speakersTag {
                            text-decoration: none;
                            display: flex;
                            flex-direction: column;


                            .speakerName {
                                color: var(--red);
                                font-size: var(--type-large);
                                font-weight: 800;
                                font-style: italic;
                                line-height: 1.1;

                                @media screen and (max-width: 800px) {
                                    font-size: 2.8rem;
                                }
                            }

                            .speakerRole {
                                font-size: var(--type-small);
                                font-weight: 300;
                                color: black;
                                margin-top: -5px;
                                letter-spacing: 0px;

                                @media screen and (max-width: 800px) {
                                    font-size: 1.9rem;
                                }
                            }

                            &:hover {
                                .speakerName {
                                    text-decoration: underline solid var(--red);
                                    -webkit-text-decoration-line: underline;
                                    -webkit-text-decoration-color: var(--red);
                                }

                                .speakerRole {
                                    text-decoration: underline solid black;
                                    -webkit-text-decoration-line: underline;
                                    -webkit-text-decoration-color: var(--black);
                                }
                            }
                        }

                        .socialLinksSession {
                            align-items: center;
                            justify-content: flex-start;
                            display: flex;
                            gap: 20px;

                            a {
                                will-change: transform;
                                transition: 0.2s ease;

                                svg {
                                    width: 44px;
                                    height: 44px;
                                    fill: var(--purple);
                                }

                                &:hover {
                                    transform: translateY(-1px);
                                }
                            }
                        }
                    }

                    @media screen and (max-width: 1100px) {
                        flex-direction: column;
                        gap: 20px;

                        .left {
                            width: 100%;
                        }

                        .rightSession {
                            width: 100%;
                        }
                    }
                }

                // was gonna add the same hover interaction, 
                // but it moves the page sometimes - doesn't look that good
                // &:hover {
                //     padding: 50px 0;
                //     box-shadow: 0px 4px 7px 0 rgba(0, 0, 0, 0.3);
                //     transform: translateY(-2px);

                //     .speakerContent {
                //         padding: 35px 0;
                //     }
                // }
            }

            @media screen and (max-width: 500px) {
                .speakerContainer {
                    margin-top: -20px;
                }
            }
        }
    }

    @media screen and (max-width: 750px) {
        padding: 0px 0px 0px 0px !important;

        .sessionContainer {
            width: 100%;
            border-radius: 0;

            .breadCrumbsContainer {
                top: 0;
                left: 0;
                padding-left: 20px;
                margin-top: -5px !important;
                color: rgba(0, 0, 0, 0.664);

                a {
                    color: rgba(0, 0, 0, 0.664) !important;
                }
            }

            .topContainer {
                padding-top: 40px;
            }

            .bottomContainer {
                border-radius: 0;
            }
        }
    }
}

